Phone number in the footer was hidden by a poorly written style, correcting that

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -33,7 +33,7 @@ header {
         }
     }
 }
-.site-branding {
+.site-title {
     margin-right: auto;
     padding: 12px;
     float: left;
